# utils_container

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
fetpype_utils/: utils.py
fetpype_utils/cli/: run_bias_field_correction.py  run_brain_extraction.py  run_denoising.py
fetpype_utils/fetal_bet/codes/: data_generator_monai.py  inference.py  model_zoo.py  test.py  train.py
fetpype_utils/models_ckpt/: fetbet_AttUNet.pth
fetpype_utils/monaifbs/: __about__.py  __init__.py  fetal_brain_seg.py
fetpype_utils/monaifbs/models/: old_dynunet.py
fetpype_utils/monaifbs/src/inference/: monai_dynunet_inference.py
fetpype_utils/monaifbs/src/utils/: custom_inferer.py  custom_transform.py
test_docker/: test_docker.sh
