[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetpype_utils"
version = "0.1.1"
description = "Utilities for preprocessing fetal brain MRI scans"
authors = [{name = "Thomas Sanchez", email = "thomas.sanchez@unil.ch"}]
dependencies = [
    "monai==1.4.0",
    "SimpleITK",
    "antspyx",
]
